# server

./: .gitignore  README.md  entrypoint.sh  pyproject.toml
src/: __main__.py
src/data/: test_api.json
src/server/: consts.py  core.py  handler.py  views.py
